      considered to be in compatibility class zero). When a group is upgraded
      to a new group which has a different compatibility class, the rollback
      stack is invalidated unless the group also contains postRollback script
      which can rollback to the version being updated. Postrollback scripts
      can now be defined with a list of compatibility versions they are able
      to roll back to.
  o Client Changes:
    * Proxy configuration parameter is now of the form 'proxy protocol url'
      (i.e. 'proxy http http://proxy.some.com'), and allows separate proxies
      to be configured for http and https. If old 'proxy url' form is used,
      separate proxies are configured for http and https rather than a
      single proxy being using for both protocols. Users who need the old
      behavior should set explicit configure the same proxy for both protocols.
  o Proxy Changes:
    * The proxy can now be configured to use an http proxy for all outgoing
      requests. The 'proxy' configuration item is supported in a manner
      identical to the client.
    * Removed standalone servers (unused) ability to act as both a proxy
      and a standalone server; this removes the standalone proxies dependence
      on the X-Conary-Servername header.

Changes in 1.1.21:
  o Repository Changes:
    * A "hidden" keyword argument has been added to the
      commitChangeSet() and hasTroves() method.  This allows mirror
      users to commit troves which will never be displayed to users.
      The presentHiddenTroves() call makes all hidden troves
      visible.  The XML-RPC protocol version is now 46.

  o Internal Changes:
    * StreamSet operations in C now use a common StreamSet_GetSSD()
      function which creates the _streamDict object if it does not yet
      exist.  This fixes crashes in rare cases where a
      StreamSet.find() class method is used before any instances of
      that StreamSet have been created. (CNY-1524)