@@ -978,7 +978,7 @@ class Database(SqlDbRepository):
             # isn't committed until the self.commit below
             # an object for historical reasons
             try:
-                localrep.LocalRepositoryChangeSetJob(
+                csJob = localrep.LocalRepositoryChangeSetJob(
                     dbCache, cs, callback, autoPinList, 
                     filePriorityPath,
                     allowIncomplete = (rollbackPhase is not None),
@@ -1088,18 +1088,20 @@ class Database(SqlDbRepository):
         self._updateTransactionCounter = True
 	self.commit()
 
-        if fsJob.getInvalidateRollbacks():
+        if updateDatabase and csJob.invalidateRollbacks():
             self.invalidateRollbacks()
 
         if rollbackPhase is not None:
             return fsJob
 
-        fsJob.runPostScripts(tagScript, rollbackPhase)
+        if not justDatabase:
+            fsJob.runPostScripts(tagScript, rollbackPhase)
 
-    def runPreScripts(self, uJob, callback, tagScript = None, 
-                      isRollback = False, tmpDir = '/tmp'):
-        if isRollback:
-           return
+    def runPreScripts(self, uJob, callback, tagScript = None,
+                      isRollback = False, justDatabase = False,
+                      tmpDir = '/tmp'):
+        if isRollback or justDatabase:
+           return True
 
         for job, script in uJob.iterJobPreScripts():
             scriptId = "%s preupdate" % job[0]
